--- a/eShop/src/index.css
+++ b/eShop/src/index.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+    background-color:#1C1C1C;
+    font-family: 'Lobster', sans-serif;
+}
+footer{
+    background-color:#0B0B0B;
+}
+
