--- a/eShop/src/index.css
+++ b/eShop/src/index.css
@@ -11,6 +11,12 @@ body{
 footer{
     background-color:#0B0B0B;
 }
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 
-
-
+input[type='number'] {
+  -moz-appearance: textfield; /* Firefox */
+}
